--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
   server_name localhosts;
   location / {
     rppt /usr/share/nginx/html;
-    index index.html;
+    index jd.html;
   }
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log
