--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,23 @@ jobs:
           docker build -t $ECR_REGISTRY/githubecr:github.sha -f Dockerfile.yml .
           docker push $ECR_REGISTRY/githubecr:github.sha
           echo "image=$ECR_REGISTRY/githubecr:github.sha" >> $GITHUB_OUTPUT
+      - name: Create ECS Cluster
+        run: |
+          aws ecs create-cluster --cluster-name nginx-ECS
+     # Step to register task definition
+      - name: Register Task Definition
+        run: |
+          aws ecs register-task-definition \
+            --family nginx-task \
+            --container-definitions '[{"name":"Devara","image":"484907495344.dkr.ecr.ap-southeast-1.amazonaws.com/githubecr","portMappings":[{"containerPort":80}],"memoryReservation":128}]'
+     # Step to create ECS service
+      - name: Create ECS Service
+        run: |
+          aws ecs create-service \
+            --cluster nginx-ECS \
+            --service-name nginx-service \
+            --task-definition nginx-task \
+            --desired-count 1 \
+            --launch-type EC2 \
+            --region ${{ env.AWS_REGION }}
       
